pd2/python_pd2Parser.py
# Generated from python_pd2.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class python_pd2Parser ( Parser ):

    grammarFileName = "python_pd2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'='", "'+='", 
                     "'-='", "'*='", "'/='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "','", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='", "'True'", "'False'", "'if'", "'elif'", "'else'", 
                     "'and'", "'or'", "'not'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "COMMA", "LT", "LTE", "GT", "GTE", "EQ", "NEQ", 
                      "TRUE", "FALSE", "IF", "ELIF", "ELSE", "AND", "OR", 
                      "NOT", "VARIABLE", "NUMBER", "STRING", "COLON", "LINE_COMMENT", 
                      "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_suite = 2
    RULE_assignment = 3
    RULE_expression = 4
    RULE_orExpr = 5
    RULE_andExpr = 6
    RULE_notExpr = 7
    RULE_compareExpr = 8
    RULE_addExpr = 9
    RULE_mulExpr = 10
    RULE_unaryExpr = 11
    RULE_primary = 12
    RULE_list = 13
    RULE_ifStatement = 14

    ruleNames =  [ "program", "statement", "suite", "assignment", "expression", 
                   "orExpr", "andExpr", "notExpr", "compareExpr", "addExpr", 
                   "mulExpr", "unaryExpr", "primary", "list", "ifStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    ASSIGN=5
    ADD_ASSIGN=6
    SUB_ASSIGN=7
    MUL_ASSIGN=8
    DIV_ASSIGN=9
    ADD=10
    SUB=11
    MUL=12
    DIV=13
    MOD=14
    COMMA=15
    LT=16
    LTE=17
    GT=18
    GTE=19
    EQ=20
    NEQ=21
    TRUE=22
    FALSE=23
    IF=24
    ELIF=25
    ELSE=26
    AND=27
    OR=28
    NOT=29
    VARIABLE=30
    NUMBER=31
    STRING=32
    COLON=33
    LINE_COMMENT=34
    NEWLINE=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(python_pd2Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.NEWLINE)
            else:
                return self.getToken(python_pd2Parser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.StatementContext,i)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = python_pd2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35450257408) != 0):
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [35]:
                    self.state = 30
                    self.match(python_pd2Parser.NEWLINE)
                    pass
                elif token in [24, 30]:
                    self.state = 31
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(python_pd2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(python_pd2Parser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(python_pd2Parser.IfStatementContext,0)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = python_pd2Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.assignment()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.ifStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.NEWLINE)
            else:
                return self.getToken(python_pd2Parser.NEWLINE, i)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)




    def suite(self):

        localctx = python_pd2Parser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.statement()
            self.state = 52
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 45 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 44
                        self.match(python_pd2Parser.NEWLINE)
                        self.state = 47 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==35):
                            break

                    self.state = 49
                    self.statement() 
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(python_pd2Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def ADD_ASSIGN(self):
            return self.getToken(python_pd2Parser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(python_pd2Parser.SUB_ASSIGN, 0)

        def MUL_ASSIGN(self):
            return self.getToken(python_pd2Parser.MUL_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(python_pd2Parser.DIV_ASSIGN, 0)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = python_pd2Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.match(python_pd2Parser.VARIABLE)
                self.state = 56
                self.match(python_pd2Parser.ASSIGN)
                self.state = 57
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(python_pd2Parser.VARIABLE)
                self.state = 59
                self.match(python_pd2Parser.ADD_ASSIGN)
                self.state = 60
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(python_pd2Parser.VARIABLE)
                self.state = 62
                self.match(python_pd2Parser.SUB_ASSIGN)
                self.state = 63
                self.expression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.match(python_pd2Parser.VARIABLE)
                self.state = 65
                self.match(python_pd2Parser.MUL_ASSIGN)
                self.state = 66
                self.expression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 67
                self.match(python_pd2Parser.VARIABLE)
                self.state = 68
                self.match(python_pd2Parser.DIV_ASSIGN)
                self.state = 69
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(python_pd2Parser.OrExprContext,0)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = python_pd2Parser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.AndExprContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.OR)
            else:
                return self.getToken(python_pd2Parser.OR, i)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)




    def orExpr(self):

        localctx = python_pd2Parser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.andExpr()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 75
                self.match(python_pd2Parser.OR)
                self.state = 76
                self.andExpr()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.NotExprContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.NotExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.AND)
            else:
                return self.getToken(python_pd2Parser.AND, i)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)




    def andExpr(self):

        localctx = python_pd2Parser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.notExpr()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 83
                self.match(python_pd2Parser.AND)
                self.state = 84
                self.notExpr()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(python_pd2Parser.NOT, 0)

        def notExpr(self):
            return self.getTypedRuleContext(python_pd2Parser.NotExprContext,0)


        def compareExpr(self):
            return self.getTypedRuleContext(python_pd2Parser.CompareExprContext,0)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_notExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)




    def notExpr(self):

        localctx = python_pd2Parser.NotExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_notExpr)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(python_pd2Parser.NOT)
                self.state = 91
                self.notExpr()
                pass
            elif token in [1, 3, 10, 11, 22, 23, 30, 31, 32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.compareExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompareExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.AddExprContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.AddExprContext,i)


        def LT(self):
            return self.getToken(python_pd2Parser.LT, 0)

        def LTE(self):
            return self.getToken(python_pd2Parser.LTE, 0)

        def GT(self):
            return self.getToken(python_pd2Parser.GT, 0)

        def GTE(self):
            return self.getToken(python_pd2Parser.GTE, 0)

        def EQ(self):
            return self.getToken(python_pd2Parser.EQ, 0)

        def NEQ(self):
            return self.getToken(python_pd2Parser.NEQ, 0)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_compareExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompareExpr" ):
                listener.enterCompareExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompareExpr" ):
                listener.exitCompareExpr(self)




    def compareExpr(self):

        localctx = python_pd2Parser.CompareExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_compareExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.addExpr()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4128768) != 0):
                self.state = 96
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4128768) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 97
                self.addExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.MulExprContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.MulExprContext,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.ADD)
            else:
                return self.getToken(python_pd2Parser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.SUB)
            else:
                return self.getToken(python_pd2Parser.SUB, i)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_addExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExpr" ):
                listener.enterAddExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExpr" ):
                listener.exitAddExpr(self)




    def addExpr(self):

        localctx = python_pd2Parser.AddExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_addExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.mulExpr()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10 or _la==11:
                self.state = 101
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 102
                self.mulExpr()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.UnaryExprContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.UnaryExprContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.MUL)
            else:
                return self.getToken(python_pd2Parser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.DIV)
            else:
                return self.getToken(python_pd2Parser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.MOD)
            else:
                return self.getToken(python_pd2Parser.MOD, i)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_mulExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulExpr" ):
                listener.enterMulExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulExpr" ):
                listener.exitMulExpr(self)




    def mulExpr(self):

        localctx = python_pd2Parser.MulExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_mulExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.unaryExpr()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 28672) != 0):
                self.state = 109
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 28672) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 110
                self.unaryExpr()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(python_pd2Parser.ADD, 0)

        def unaryExpr(self):
            return self.getTypedRuleContext(python_pd2Parser.UnaryExprContext,0)


        def SUB(self):
            return self.getToken(python_pd2Parser.SUB, 0)

        def primary(self):
            return self.getTypedRuleContext(python_pd2Parser.PrimaryContext,0)


        def getRuleIndex(self):
            return python_pd2Parser.RULE_unaryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpr" ):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpr" ):
                listener.exitUnaryExpr(self)




    def unaryExpr(self):

        localctx = python_pd2Parser.UnaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_unaryExpr)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(python_pd2Parser.ADD)
                self.state = 117
                self.unaryExpr()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(python_pd2Parser.SUB)
                self.state = 119
                self.unaryExpr()
                pass
            elif token in [1, 3, 22, 23, 30, 31, 32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.primary()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,0)


        def list_(self):
            return self.getTypedRuleContext(python_pd2Parser.ListContext,0)


        def STRING(self):
            return self.getToken(python_pd2Parser.STRING, 0)

        def NUMBER(self):
            return self.getToken(python_pd2Parser.NUMBER, 0)

        def TRUE(self):
            return self.getToken(python_pd2Parser.TRUE, 0)

        def FALSE(self):
            return self.getToken(python_pd2Parser.FALSE, 0)

        def VARIABLE(self):
            return self.getToken(python_pd2Parser.VARIABLE, 0)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)




    def primary(self):

        localctx = python_pd2Parser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primary)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(python_pd2Parser.T__0)
                self.state = 124
                self.expression()
                self.state = 125
                self.match(python_pd2Parser.T__1)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.list_()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match(python_pd2Parser.STRING)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.match(python_pd2Parser.NUMBER)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.match(python_pd2Parser.TRUE)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.match(python_pd2Parser.FALSE)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 7)
                self.state = 132
                self.match(python_pd2Parser.VARIABLE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd2Parser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd2Parser.COMMA)
            else:
                return self.getToken(python_pd2Parser.COMMA, i)

        def getRuleIndex(self):
            return python_pd2Parser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)




    def list_(self):

        localctx = python_pd2Parser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(python_pd2Parser.T__2)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8065649674) != 0):
                self.state = 136
                self.expression()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 137
                    self.match(python_pd2Parser.COMMA)
                    self.state = 138
                    self.expression()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 146
            self.match(python_pd2Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(python_pd2Parser.IF, 0)

        def expression(self, i:int=None):
            if i is None:
